\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'polyCub'}


\section{Changes in polyCub version 0.5-1 (2014-09-27)}{

  \itemize{
    \item Nodes and weights for \code{polyCub.SV()} were only cached
    up to \code{nGQ=59}, not 60 as announced in version 0.5-0. Fixed
    that which also makes examples truly run without \pkg{statmod}.

    \item In \code{polyCub.SV()}, the new special setting
    \code{f=NULL} means to only compute nodes and weights.
  }
  
}



\section{Changes in polyCub version 0.5-0 (2014-05-07)}{

  \itemize{
    \item \code{polyCub.SV()} gained an argument \code{engine} to choose
    among available implementations. The new and faster C-implementation
    is the default. There should not be any numerical differences in the
    result of the cubature.

    \item Package \CRANpkg{statmod} is no longer strictly required
    (imported). Nodes and weights for Gauss-Legendre quadrature in
    \code{polyCub.SV()} are now cached in the \pkg{polyCub} package
    up to \code{nGQ=60}. \pkg{statmod}\code{::gauss.quad} is only
    queried for a higher number of nodes.
  }
  
}



\section{Changes in polyCub version 0.4-3 (2014-03-14)}{

  \itemize{
    \item \code{polyCub.iso()} ...
    \itemize{
      \item could not handle additional arguments for
      \code{integrate()} given in the \code{control} list.
    
      \item applies the \code{control} arguments also
      to the numerical approximation of \code{intrfr}.
    }
    
    \item The \code{checkintrfr()} function is exported and documented.

    \item Added a \file{CITATION} file.
  }
  
}



\section{Changes in polyCub version 0.4-2 (2014-02-12)}{

  \itemize{
    \item \code{plotpolyf()} ...
    
    \itemize{
      \item gained an additional argument
      \code{print.args}, an optional list of arguments passed to