@@ -30,15 +30,13 @@ importFrom(grDevices,xy.coords)
 importFrom(graphics,image)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(spatstat,area.xypolygon)
 importFrom(spatstat,as.im.function)
 importFrom(spatstat,as.polygonal)
-importFrom(spatstat,is.hole.xypolygon)
 importFrom(spatstat,is.polygonal)
 importFrom(spatstat,owin)
 importFrom(spatstat,plot.im)
 importFrom(spatstat,plot.owin)
-importFrom(spatstat,reverse.xypolygon)
+importFrom(spatstat,summary.owin)
 importFrom(stats,cov2cor)
 importFrom(stats,dist)
 importFrom(stats,integrate)
